[gd_scene load_steps=13 format=3 uid="uid://b46bs06gjk2fg"]

[ext_resource type="Script" uid="uid://bg54445s47lpa" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://0dq8wrdf26pf" path="res://sprites/necromancer game path graves.png" id="2_kek77"]
[ext_resource type="PackedScene" uid="uid://bmb61qt3ffiih" path="res://Fire.tscn" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dvw07ujn57p1w" path="res://Necromancer.tscn" id="4_1bvp3"]
[ext_resource type="Theme" uid="uid://byd85cp2suhid" path="res://theme/pixel.tres" id="5_5vw27"]
[ext_resource type="Texture2D" uid="uid://dkot6s4fnaqqg" path="res://sprites/bones.png" id="6_kek77"]
[ext_resource type="Texture2D" uid="uid://csurj1byu02li" path="res://sprites/scrap.png" id="7_4c57u"]
[ext_resource type="Texture2D" uid="uid://ddqcbvylxe6o2" path="res://sprites/crystal.png" id="8_efxa6"]
[ext_resource type="PackedScene" uid="uid://c6vlslsxkbuxt" path="res://Spikes.tscn" id="9_kek77"]
[ext_resource type="Texture2D" uid="uid://b1pghm52facpo" path="res://sprites/tutorial_overlay.png" id="10_4c57u"]
[ext_resource type="AudioStream" uid="uid://ousmq5m1q4jp" path="res://sounds/bgm.mp3" id="11_efxa6"]

[sub_resource type="Curve2D" id="Curve2D_lquwl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -5, -42, 0, 0, 0, 0, -2, -71, 0, 0, 0, 0, 35, -109, 0, 0, 0, 0, 46, -134, 0, 0, 0, 0, 50, -151, 0, 0, 0, 0, 44, -170, 0, 0, 0, 0, 35, -184, 0, 0, 0, 0, 13, -188, 0, 0, 0, 0, -12, -173, 0, 0, 0, 0, -34, -137, 0, 0, 0, 0, -55, -106, 0, 0, 0, 0, -81, -78, 0, 0, 0, 0, -105, -59, 0, 0, 0, 0, -131, -57, 0, 0, 0, 0, -145, -63, 0, 0, 0, 0, -148, -83, 0, 0, 0, 0, -144, -94, 0, 0, 0, 0, -137, -98, 0, 0, 0, 0, -125, -112, 0, 0, 0, 0, -127, -118, 0, 0, 0, 0, -149, -141, 0, 0, 0, 0, -146, -154, 0, 0, 0, 0, -133, -178, 0, 0, 0, 0, -124, -194, 0, 0, 0, 0, -132, -209, 0, 0, 0, 0, -139, -224, 0, 0, 0, 0, -145, -235, 0, 0, 0, 0, -137, -244, 0, 0, 0, 0, -110, -245, 0, 0, 0, 0, -70, -240, 0, 0, 0, 0, -43, -236, 0, 0, 0, 0, -15, -240, 0, 0, 0, 0, 2, -249, 0, 0, 0, 0, 3, -267, 0, 0, 0, 0, -12, -274, 0, 0, 0, 0, -49, -281, 0, 0, 0, 0, -72, -293, 0, 0, 0, 0, -79, -312, 0, 0, 0, 0, -75, -336, 0, 0, 0, 0, -61, -347, 0, 0, 0, 0, -30, -351, 0, 0, 0, 0, 20, -345, 0, 0, 0, 0, 61, -333, 0, 0, 0, 0, 98, -324, 0, 0, 0, 0, 142, -321, 0, 0, 0, 0, 178, -325, 0, 0, 0, 0, 220, -338, 0, 0, 0, 0, 257, -343, 0, 0, 0, 0, 306, -326, 0, 0, 0, 0, 335, -315, 0, 0, 0, 0, 353, -291, 0, 0, 0, 0, 350, -257, 0, 0, 0, 0, 334, -227, 0, 0, 0, 0, 331, -205, 0, 0, 0, 0, 312, -172, 0, 0, 0, 0, 329, -138, 0, 0, 0, 0, 334, -97, 0, 0, 0, 0, 317, -69, 0, 0, 0, 0, 250, -79, 0, 0, 0, 0, 191, -85, 0, 0, 0, 0, 155, -92, 0, 0, 0, 0, 131, -110, 0, 0, 0, 0, 130, -131, 0, 0, 0, 0, 145, -141, 0, 0, 0, 0, 182, -150, 0, 0, 0, 0, 196, -165, 0, 0, 0, 0, 196, -183, 0, 0, 0, 0, 184, -199, 0, 0, 0, 0, 151, -211)
}
point_count = 70

[node name="Main" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_0xm2m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kek77")
centered = false

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(190, 380)
curve = SubResource("Curve2D_lquwl")

[node name="Fire" parent="." instance=ExtResource("3_1bvp3")]
position = Vector2(319, 145)

[node name="Necromancer" parent="." instance=ExtResource("4_1bvp3")]
position = Vector2(361, 118)

[node name="Spikes" parent="." instance=ExtResource("9_kek77")]
position = Vector2(192, 367)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("5_5vw27")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 18.0
theme = ExtResource("5_5vw27")
theme_type_variation = &"ProgressBarBlue"

[node name="Level" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 2.0
offset_right = 58.0
offset_bottom = 18.0
text = "Level: 1 "

[node name="RP" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 560.0
offset_top = 18.0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.11119685, 0.11119684, 0.11119684, 1)

[node name="VBC" type="VBoxContainer" parent="CanvasLayer/Control/RP"]
custom_minimum_size = Vector2(76, 338)
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 78.0
offset_bottom = 340.0
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Control/RP/VBC"]
layout_mode = 2
text = "Resources:"

[node name="HBC" type="HBoxContainer" parent="CanvasLayer/Control/RP/VBC"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/RP/VBC/HBC"]
layout_mode = 2
texture = ExtResource("6_kek77")
expand_mode = 3

[node name="Bones" type="Label" parent="CanvasLayer/Control/RP/VBC/HBC"]
layout_mode = 2
size_flags_horizontal = 3
text = "500"
horizontal_alignment = 2

[node name="HBC2" type="HBoxContainer" parent="CanvasLayer/Control/RP/VBC"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/RP/VBC/HBC2"]
layout_mode = 2
texture = ExtResource("7_4c57u")
expand_mode = 3

[node name="Steel" type="Label" parent="CanvasLayer/Control/RP/VBC/HBC2"]
layout_mode = 2
size_flags_horizontal = 3
text = "500"
horizontal_alignment = 2

[node name="HBC3" type="HBoxContainer" parent="CanvasLayer/Control/RP/VBC"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/RP/VBC/HBC3"]
layout_mode = 2
texture = ExtResource("8_efxa6")
expand_mode = 3

[node name="Magic" type="Label" parent="CanvasLayer/Control/RP/VBC/HBC3"]
layout_mode = 2
size_flags_horizontal = 3
text = "500"
horizontal_alignment = 2

[node name="Zombie" type="Button" parent="CanvasLayer/Control/RP/VBC"]
layout_mode = 2
text = "Zombie"

[node name="Skele" type="Button" parent="CanvasLayer/Control/RP/VBC"]
layout_mode = 2
text = "Skeleton"

[node name="SkeleArcher" type="Button" parent="CanvasLayer/Control/RP/VBC"]
layout_mode = 2
text = "Skel Archr"

[node name="Warlock" type="Button" parent="CanvasLayer/Control/RP/VBC"]
layout_mode = 2
text = "Warlock"

[node name="DemiLich" type="Button" parent="CanvasLayer/Control/RP/VBC"]
layout_mode = 2
text = "Demi Lich"

[node name="TutorialOverlay" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("10_4c57u")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_efxa6")
volume_db = -8.587
autoplay = true

[connection signal="pressed" from="CanvasLayer/Control/RP/VBC/Zombie" to="." method="_on_zombie_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RP/VBC/Skele" to="." method="_on_skele_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RP/VBC/SkeleArcher" to="." method="_on_skele_archer_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RP/VBC/Warlock" to="." method="_on_warlock_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RP/VBC/DemiLich" to="." method="_on_demi_lich_pressed"]
